--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="textos">
         <h1>Cami</h1>
-        <h2>Desarrolladora FrontEnd</h2>
+        <h2>Developer & desing</h2>
     </div>
 </header>
 <main>
@@ -43,14 +43,14 @@
         <h3>¿Quien Soy?</h3>
         <p class="after">Conoce mas sobre lo asombrosa que soy...</p>
         <div class="card">
-        <div class="content-card">
-            <div class="people">
-                <img src="img/cam2.png" alt="">
+        <div class="content-card" >
+            <div class="people1" >
+                <img src="img/academico.png" alt="">
             </div>
-            <div class="texto-team">
+            <!-- <div class="texto-team">
                 <h4>Camila Piscionieri</h4>
                 <P>Desarrolladora FrontEnd</P>
-            </div>
+            </div> -->
         </div>
 
         <div class="content-card">
@@ -59,18 +59,18 @@
             </div>
             <div class="texto-team">
                 <h4>Camila Piscionieri</h4>
-                <P>Desarrolladora FrontEnd</P>
+                <P>FrontEnd Developer</P>
             </div>
         </div>
 
         <div class="content-card">
-            <div class="people">
-                <img src="img/cam2.png" alt="">
+            <div class="people2">
+                <img src="img/lenguajes.png" alt="">
             </div>
-            <div class="texto-team">
+            <!-- <div class="texto-team">
                 <h4>Camila Piscionieri</h4>
                 <P>Desarrolladora FrontEnd</P>
-            </div>
+            </div>-->
         </div>
 
     </div>
@@ -79,7 +79,7 @@
     <section class="abaut" id="servicio">
         <div class="contenedor">
             <h3>Mis Servicios</h3>
-            <p class="after">Siempre mejorando para Ti</p>
+            <p class="after">¡Siempre mejorando para vos!</p>
             <div class="servicios">
             <div class="caja-servicios">
                 <img src="img/creatividad.png" alt="">
@@ -94,25 +94,34 @@
             <div class="caja-servicios">
                 <img src="img/programming.png" alt="">
                 <h4>Efectos Avanzados</h4>
-                <p>Lo mejor del CSS</p>
+                <p>Los mejores efectos</p>
             </div>
             </div>
         </div>
     </section>
 
     <section class="work contenedor" id="trabajo">
-        <h3>Nuestro trabajo</h3>
+        <h3>Mis Trabajos</h3>
         <p class="after">¡Convirtiendo lo simple en algo profecional! </p>
         <div class="botones-work">
             <ul>
                 <li class="filter active" data-nombre='todos'>Todos</li>
-                <li class="filter" data-nombre='diseño'>Diseño</li>
-                <li class="filter" data-nombre='programacion'>Programacion</li>
-                <li class="filter" data-nombre='marketing'>Marketing</li>
+                <li class="filter" data-nombre=''>Diseño</li>
+                <li class="filter" data-nombre=''>Programacion</li>
+                <li class="filter" data-nombre=''>UX/UI</li>
 
             </ul>
         </div>
         <div class="galeria-work">
+            <div class="cont-work">
+                <div class="img-work">
+                    <img src="img/mantenimiento.png" alt="">
+                </div>
+                <div class="textos-work">
+                    <h4>Esta seccion esta siendo modificada!</h4>
+                </div>
+            </div>
+            <!--
         <div class="cont-work programacion">
             <div class="img-work">
                 <img src="img/pro1.jpg" alt="">
@@ -193,7 +202,7 @@
                 <h4>UX/UI</h4>
             </div>
         </div>
-        
+    -->
     </div>
     </section>
 </main>
@@ -206,9 +215,13 @@
             <img src="img/gato.png" alt="">
            </div> -->
            <div class="iconos">
-            <i class="fa-brands fa-github" ></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-telegram"></i>
+            <form action="https://github.com/CamilaPiscionieri">
+                <button type="submit" class="fa-brands fa-github"></button>
+            </form>
+            <form action="https://www.linkedin.com/in/camila-piscionieri-8ba56b169/">
+                <button type="submit" class="fa-brands fa-linkedin"></button>
+            </form>
+          
            </div>
            <p>La creatvividad y la puntualidad es lo que me distingue del resto</p>
         </div>
