--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav id="nav" class="nav1">
         <div class="contenedor-nav">
             <div class="logo">
-                <img src="img/gat33.png" alt="">
+                <img src="img/LogoNuevo.png" alt="">
             </div>
             <div class="enlaces" id="enlaces">
                 <a href="#" id="enlace-inicio" class="btn-header">Inicio</a>
@@ -35,7 +35,7 @@
 
     <div class="textos">
         <h1>Cami</h1>
-        <h2>Developer & desing</h2>
+        <h2>Developer & design</h2>
     </div>
 </header>
 <main>
