--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="caja-servicios">
                 <img src="img/creatividad.png" alt="">
                 <h4>Creativa</h4>
-                <p>Siempre inovando</p>
+                <p>Siempre innovando</p>
             </div>
             <div class="caja-servicios">
                 <img src="img/ui-design.png" alt="">
@@ -102,18 +102,19 @@
 
     <section class="work contenedor" id="trabajo">
         <h3>Mis Trabajos</h3>
-        <p class="after">¡Convirtiendo lo simple en algo profecional! </p>
+        <p class="after">¡Convirtiendo lo simple en algo profesional! </p>
         <div class="botones-work">
             <ul>
                 <li class="filter active" data-nombre='todos'>Todos</li>
-                <li class="filter" data-nombre=''>Diseño</li>
-                <li class="filter" data-nombre=''>Programacion</li>
-                <li class="filter" data-nombre=''>UX/UI</li>
+                <li class="filter" data-nombre='principal'>Diseño</li>
+                <li class="filter" data-nombre='principal'>Programacion</li>
+                <li class="filter" data-nombre='principal'>UX/UI</li>
 
             </ul>
         </div>
         <div class="galeria-work">
-            <div class="cont-work">
+
+            <div class="cont-work principal">
                 <div class="img-work">
                     <img src="img/mantenimiento.png" alt="">
                 </div>
@@ -121,6 +122,7 @@
                     <h4>Esta seccion esta siendo modificada!</h4>
                 </div>
             </div>
+
             <!--
         <div class="cont-work programacion">
             <div class="img-work">
